; ModuleID = '/home/carl/AnghaBench/git/extr_diff.c_diff_unmerge.c'
source_filename = "/home/carl/AnghaBench/git/extr_diff.c_diff_unmerge.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.diff_filepair = type { i32 }
%struct.diff_options = type { i32, i64 }
%struct.diff_filespec = type { i32 }

@diff_queued_diff = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.diff_filepair* @diff_unmerge(%struct.diff_options* %0, i8* %1) #0 {
  %3 = alloca %struct.diff_filepair*, align 8
  %4 = alloca %struct.diff_options*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.diff_filepair*, align 8
  %7 = alloca %struct.diff_filespec*, align 8
  %8 = alloca %struct.diff_filespec*, align 8
  store %struct.diff_options* %0, %struct.diff_options** %4, align 8
  store i8* %1, i8** %5, align 8
  %9 = load %struct.diff_options*, %struct.diff_options** %4, align 8
  %10 = getelementptr inbounds %struct.diff_options, %struct.diff_options* %9, i32 0, i32 1
  %11 = load i64, i64* %10, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %24

13:                                               ; preds = %2
  %14 = load i8*, i8** %5, align 8
  %15 = load %struct.diff_options*, %struct.diff_options** %4, align 8
  %16 = getelementptr inbounds %struct.diff_options, %struct.diff_options* %15, i32 0, i32 1
  %17 = load i64, i64* %16, align 8
  %18 = load %struct.diff_options*, %struct.diff_options** %4, align 8
  %19 = getelementptr inbounds %struct.diff_options, %struct.diff_options* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 8
  %21 = call i64 @strncmp(i8* %14, i64 %17, i32 %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %13
  store %struct.diff_filepair* null, %struct.diff_filepair** %3, align 8
  br label %35

24:                                               ; preds = %13, %2
  %25 = load i8*, i8** %5, align 8
  %26 = call %struct.diff_filespec* @alloc_filespec(i8* %25)
  store %struct.diff_filespec* %26, %struct.diff_filespec** %7, align 8
  %27 = load i8*, i8** %5, align 8
  %28 = call %struct.diff_filespec* @alloc_filespec(i8* %27)
  store %struct.diff_filespec* %28, %struct.diff_filespec** %8, align 8
  %29 = load %struct.diff_filespec*, %struct.diff_filespec** %7, align 8
  %30 = load %struct.diff_filespec*, %struct.diff_filespec** %8, align 8
  %31 = call %struct.diff_filepair* @diff_queue(i32* @diff_queued_diff, %struct.diff_filespec* %29, %struct.diff_filespec* %30)
  store %struct.diff_filepair* %31, %struct.diff_filepair** %6, align 8
  %32 = load %struct.diff_filepair*, %struct.diff_filepair** %6, align 8
  %33 = getelementptr inbounds %struct.diff_filepair, %struct.diff_filepair* %32, i32 0, i32 0
  store i32 1, i32* %33, align 4
  %34 = load %struct.diff_filepair*, %struct.diff_filepair** %6, align 8
  store %struct.diff_filepair* %34, %struct.diff_filepair** %3, align 8
  br label %35

35:                                               ; preds = %24, %23
  %36 = load %struct.diff_filepair*, %struct.diff_filepair** %3, align 8
  ret %struct.diff_filepair* %36
}

declare dso_local i64 @strncmp(i8*, i64, i32) #1

declare dso_local %struct.diff_filespec* @alloc_filespec(i8*) #1

declare dso_local %struct.diff_filepair* @diff_queue(i32*, %struct.diff_filespec*, %struct.diff_filespec*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
